# openweathercli

./: Cargo.toml  README.md
src/: main.rs
src/data/: customplaces.csv  customtimezones.csv  spacetimepoints.csv
