[package]
name = "openweathercli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openweathermap = { path = "../openweathermap" }
structopt = "0.3"
anyhow = "1.0"
termcolor = "1.1"
chrono = "0.4"
csv = "1.1"
serde = "1.0"
serde_derive = "1.0"